--- a/templates/base.html
+++ b/templates/base.html
@@ -171,7 +171,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/factory/">
+                                <a class="nav-link" href="/manufacturing/">
                                     <i class="fas fa-industry"></i><span class="nav-text">المصنع</span>
                                 </a>
                             </li>
